--- a/Pertemuan 5/pubspec.yaml
+++ b/Pertemuan 5/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/1.png
+    - assets/images/2.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
