--- a/Pertemuan 5/pubspec.yaml
+++ b/Pertemuan 5/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
   assets:
     - assets/images/1.png
     - assets/images/2.png
+    - assets/images/icon.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
