--- a/Pertemuan 5/pubspec.yaml
+++ b/Pertemuan 5/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   provider: ^6.1.5+1
   cupertino_icons: ^1.0.2
   url_launcher: ^6.3.0
+  image_picker: ^1.2.0
+  video_player: ^2.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
