--- a/Pertemuan 5/fix/mydj/pubspec.yaml
+++ b/Pertemuan 5/fix/mydj/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   url_launcher: ^6.3.0
   image_picker: ^1.2.0
   video_player: ^2.10.0
+  shared_preferences: ^2.5.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
