--- a/Pertemuan 5/fix/mydj/pubspec.yaml
+++ b/Pertemuan 5/fix/mydj/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^1.2.0
   video_player: ^2.10.0
   shared_preferences: ^2.5.3
+  http_parser: ^4.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
