--- a/Pertemuan 5/fix/mydj/pubspec.yaml
+++ b/Pertemuan 5/fix/mydj/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/images/1.png
     - assets/images/2.png
     - assets/images/icon.png
+    - assets/images/3.png 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
